change colors in tailwindcss, update About, Contact, Navbar, Skills, Projectts

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Marcos Rodriguez</title>
   </head>
   <body>
     
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
-      <input type="text" name="email" />
+      <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
