--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="*TITLE*" />
+    <meta property="og:image" content="%PUBLIC_URL%/linkedin.png" />
+    <meta property="og:description" content="*DESCRIPTION*" />
     <meta
       name="description"
+      title="Marcos Rodriguez Software Engineer Portfolio"
       content="Marcos Rodriguez Software Engineer Portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
